# MoyaBank

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20251220195641_init_db.sql
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/role/: handlers.rs  mod.rs  routes.rs
backend/src/api/user/: handlers.rs  mod.rs  routes.rs
backend/src/common/: common.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs  models.rs
backend/src/db/: mod.rs  models.rs
backend/src/errors/: mod.rs
backend/src/repositories/: account_repository.rs  mod.rs  role_repository.rs  transaction_repository.rs  user_repository.rs
backend/src/service/: mod.rs  node_breeze_service.rs  node_service.rs  role_service.rs  user_service.rs
backend/src/utilities/: jwt.rs  mod.rs
backend/src/utils/: mod.rs
breezeln/: Cargo.toml
breezeln/src/: main.rs  state.rs
breezeln/src/common/: common.rs
breezeln/src/config/: mod.rs
breezeln/src/errors/: mod.rs
breezeln/src/routes/: invoice.rs
breezeln/src/service/: breeze.rs  mod.rs
