[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
expanduser = "1.2.2"
tokio = { version = "1.36", features = ["full"] }
lightning = "0.0.123"
tonic_lnd = { package = "fedimint-tonic-lnd", version = "0.1.2", features = [
    "lightningrpc",
    "routerrpc",
] }
tonic = { version = "0.8", features = ["tls", "transport"] }
cln-grpc = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tracing = "0.1"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "bigdecimal",
] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
dotenvy = "0.15"
validator = { version = "0.20.0", features = ["derive"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = { version = "0.8", features = ["std"] }
bcrypt = "0.17"
async-trait = "0.1"
jsonwebtoken = "9.3"
tracing-subscriber = "0.3"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-native-tls",
    "smtp-transport",
    "builder",
] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
lightning-invoice = "0.30.0"
tempfile = "3"
 serde_with = { version = "2.0.0-rc.0" }
