[package]
name = "breezeln"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# Breez Spark (ONLY sqlite user here)
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.6.1" }
